fix the alignment of the navigation bar

--- a/main.css
+++ b/main.css
@@ -3,8 +3,16 @@ html, body{
     padding:0;
     height: 100%;
 }
-
+.navbar-toggler{
+    margin-left: 1%;
+}
+.nav_container{
+    background-color: rgba(33, 37, 41, 0.5);
+    position:absolute;
+    z-index: 2;
+}
 .navbar-nav{
+    align-items: center;
     margin-left: auto;
     margin-right: 1%;
 }
@@ -15,6 +23,11 @@ html, body{
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
+ position: absolute;
+ left:0;
+ top:0;
+ right:0;
+ bottom: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
